# bunny-ds

./: .env.example  README.md  install_packages.bat  pyproject.toml  setup.cfg
src/: __init__.py  core.py  sample_text.txt
